# esp32-smartwatch

./: .gitignore  CMakeLists.txt  LICENSE  README.md  partitions.csv  sdkconfig.defaults
main/: CMakeLists.txt  Kconfig.projbuild  main.c
main/NTP/: NTP.c  NTP.h
main/RTC/: RTC.c  RTC.h
main/WIFI/: WIFI.c  WIFI.h
main/ble/: ble.c  ble.h  ble_gap.c  ble_gap.h  ble_gatts.c  ble_gatts.h  ble_init.c  ble_init.h  ble_utils.c  ble_utils.h  gatt_ser_gap.c  gatt_ser_gatt.c  gatt_server_profile.h
main/ble/gatts_services/: ble_service_accel.c  ble_service_accel.h  ble_service_gyro.c  ble_service_gyro.h  ble_service_mag.c  ble_service_mag.h  ble_service_temp.c  ble_service_temp.h
main/ntp/: ntp_proj.c  ntp_proj.h
main/rtc/: rtc_proj.c  rtc_proj.h
main/sensors/: lis2mdl_reg.c  lis2mdl_reg.h  lsm6dso_reg.c  lsm6dso_reg.h  sensors.c  sensors.h
main/squareline-ui/: CMakeLists.txt  filelist.txt  ui.c  ui.h  ui_AccelerometerScreen.c  ui_CalendarScreen.c  ui_GryoScreen.c  ui_GyroScreen.c  ui_MagnetometerScreen.c  ui_Sensor1Screen.c  ui_TempScreen.c  ui_WatchScreen.c  ui_helpers.c  ui_img_big_png.c  ui_img_overlay_png.c
main/ui/: CMakeLists.txt  filelist.txt  ui.c  ui.h  ui_Sensor1Screen.c  ui_WatchScreen.c  ui_events.h  ui_helpers.h  ui_img_1308839649.c  ui_img_little_png.c  ui_img_second_hand_png.c
main/ui/components/: ui_comp_hook.c
main/ui/screens/: ui_Screen1.c
main/wifi/: wifi_proj.c  wifi_proj.h
